name:                hslua-aeson
version:             0.3.0
synopsis:            Allow aeson data types to be used with lua.
description:         This package provides instances to push and receive any
                     datatype encodable as JSON to and from the Lua stack.
homepage:            https://github.com/tarleb/hslua-aeson#readme
license:             MIT
license-file:        LICENSE
author:              Albert Krewinkel
maintainer:          tarleb+hslua@zeitkraut.de
copyright:           © 2017 Albert Krewinkel
category:            Foreign
build-type:          Simple
extra-source-files:  README.md
                     changelog.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/hslua/hslua-aeson

library
  hs-source-dirs:      src
  exposed-modules:     Foreign.Lua.Aeson
  build-depends:       base                 >= 4.7     && < 5
                     , aeson                >= 0.11    && < 1.3
                     , hashable             >= 1.2     && < 1.3
                     , hslua                >= 0.8     && < 0.9
                     , scientific           >= 0.3     && < 0.4
                     , text                 >= 1.1.1.0 && < 1.3
                     , unordered-containers >= 0.2     && < 0.3
                     , vector               >= 0.7
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind

test-suite hslua-aeson-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             AesonSpec.hs
  build-depends:       base
                     , hspec            >= 2.2
                     , HUnit
                     , QuickCheck
                     , quickcheck-instances
                     , aeson
                     , hashable
                     , hslua
                     , hslua-aeson
                     , ieee754
                     , scientific
                     , text
                     , unordered-containers
                     , vector
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
