name:                hslua-module-system
version:             0.1.0.0
synopsis:            Lua module wrapper around Haskell's System module.
homepage:            https://github.com/hslua/hslua-module-system
license:             MIT
license-file:        LICENSE
author:              Albert Krewinkel
maintainer:          albert+hslua@zeitkraut.de
copyright:           Albert Krewinkel <albert+hslua@zeitkraut.de>
category:            Foreign
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

source-repository head
  type:              git
  location:          https://github.com/hslua/hslua-module-system.git

library
  build-depends:       base       >= 4.9    && < 5
                     , directory >= 1.3     && < 1.4
                     , hslua      >= 1.0    && < 1.2
                     , temporary  >= 1.2    && < 1.4
  default-extensions:  LambdaCase
  default-language:    Haskell2010
  exposed-modules:     Foreign.Lua.Module.System
  hs-source-dirs:      src
  other-extensions:    OverloadedStrings

test-suite test-hslua-module-system
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  main-is:             test-hslua-module-system.hs
  hs-source-dirs:      test
  ghc-options:         -Wall -threaded
  build-depends:       base
                     , hslua
                     , hslua-module-system
                     , tasty
                     , tasty-hunit
                     , text 