name:                hslua-module-system
version:             0.2.2
synopsis:            Lua module wrapper around Haskell's System module.

description:         Provides access to system information and functionality
                     to Lua scripts via Haskell's `System` module.
                     .
                     Intended usage for this package is to preload it by adding
                     the loader function to `package.preload`. Note that the
                     Lua `package` library must have already been loaded before
                     the loader can be added.
homepage:            https://github.com/hslua/hslua-module-system
license:             MIT
license-file:        LICENSE
author:              Albert Krewinkel
maintainer:          albert+hslua@zeitkraut.de
copyright:           Albert Krewinkel <albert+hslua@zeitkraut.de>
category:            Foreign
build-type:          Simple
extra-source-files:  CHANGELOG.md
                   , test/test-system.lua
cabal-version:       >=1.10
tested-with:         GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.5

source-repository head
  type:              git
  location:          https://github.com/hslua/hslua-module-system.git

library
  build-depends:       base       >= 4.9    && < 5
                     , containers >= 0.5    && < 0.7
                     , directory  >= 1.3    && < 1.4
                     , exceptions >= 0.8    && < 0.11
                     , hslua      >= 1.0.3  && < 1.2
                     , temporary  >= 1.2    && < 1.4
                     , filepath   >= 1.4 && < 1.5
  default-extensions:  LambdaCase
  default-language:    Haskell2010
  exposed-modules:     Foreign.Lua.Module.System
  other-modules:       Foreign.Lua.Module.SystemUtils
  hs-source-dirs:      src
  other-extensions:    OverloadedStrings

test-suite test-hslua-module-system
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  main-is:             test-hslua-module-system.hs
  hs-source-dirs:      test
  ghc-options:         -Wall -threaded
  build-depends:       base
                     , hslua
                     , hslua-module-system
                     , tasty
                     , tasty-hunit
                     , tasty-lua  >= 0.2    && < 0.3
                     , text
