name:                hslua-module-text
version:             0.1
synopsis:            Lua module for text
-- description:         
homepage:            https://github.com/hslua/hslua-text-module
license:             MIT
license-file:        LICENSE
author:              Albert Krewinkel
maintainer:          albert+hslua@zeitkraut.de
copyright:           © 2017 Albert Krewinkel
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Foreign.Lua.Module.Text
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base  >= 4.8 && < 4.11
                     , hslua >= 0.9 && < 0.10
                     , text  >= 1   && < 1.3
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test-hslua
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  main-is:             test-hslua-module-text.hs
  hs-source-dirs:      test
  ghc-options:         -Wall -threaded
  -- other-modules:       Foreign.Lua.Module.TextTest
  build-depends:       base
                     , QuickCheck >= 2.7
                     , hslua
                     , hslua-module-text
                     , quickcheck-instances
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , text