name:                hslua-module-text
version:             0.1.2.2
synopsis:            Lua module for text
description:         UTF-8 aware subset of Lua's `string` module.
homepage:            https://github.com/hslua/hslua-module-text
license:             MIT
license-file:        LICENSE
author:              Albert Krewinkel
maintainer:          albert+hslua@zeitkraut.de
copyright:           © 2017–2018 Albert Krewinkel
category:            Foreign
build-type:          Simple
extra-source-files:  ChangeLog.md
                     test/hstext-test.lua
cabal-version:       >=1.10

source-repository head
  type:              git
  location:          https://github.com/hslua/hslua-module-text.git

library
  exposed-modules:     Foreign.Lua.Module.Text
  build-depends:       base  >= 4.7 && < 5
                     , hslua >= 0.9 && < 0.10
                     , text  >= 1   && < 1.3
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test-hslua
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  main-is:             test-hslua-module-text.hs
  hs-source-dirs:      test
  ghc-options:         -Wall -threaded
  build-depends:       base
                     , hslua
                     , hslua-module-text
                     , tasty
                     , tasty-hunit
                     , text