cabal-version:       2.2
name:                hslua
version:             1.3.0.1
synopsis:            Bindings to Lua, an embeddable scripting language
description:         HsLua provides bindings, wrappers, types, and helper
                     functions to bridge Haskell and <https://www.lua.org/ Lua>.
                     .
                     This package contains a full Lua interpreter version 5.3.6.
                     If you want to link it with a system-wide Lua installation,
                     use the @system-lua@ flag.
                     .
                     <https://github.com/hslua/hslua-examples Example programs>
                     are available in a separate repository.
homepage:            https://hslua.github.io/
bug-reports:         https://github.com/hslua/hslua/issues
license:             MIT
license-file:        LICENSE
author:              Albert Krewinkel, Gracjan Polak, Ömer Sinan Ağacan
maintainer:          albert+hslua@zeitkraut.de
copyright:           © 2007–2012 Gracjan Polak;
                     © 2012–2016 Ömer Sinan Ağacan;
                     © 2017-2021 Albert Krewinkel
category:            Foreign
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
                   , test/lua/*.lua
tested-with:         GHC == 8.0.2
                   , GHC == 8.2.2
                   , GHC == 8.4.4
                   , GHC == 8.6.5
                   , GHC == 8.8.4
                   , GHC == 8.10.3

source-repository head
  type:                git
  location:            https://github.com/hslua/hslua.git

common common-options
  default-language:    Haskell2010
  build-depends:       base          >= 4.8    && < 5
                     , bytestring    >= 0.10.2 && < 0.11
                     , containers    >= 0.5.9  && < 0.7
                     , exceptions    >= 0.8    && < 0.11
                     , lua           >= 1.0    && < 1.1
                     , mtl           >= 2.2    && < 2.3
                     , text          >= 1.0    && < 1.3
  ghc-options:         -Wall
                       -Wincomplete-record-updates
                       -Wnoncanonical-monad-instances
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:         -Wcpp-undef
                         -Werror=missing-home-modules
  if impl(ghc >= 8.4)
    ghc-options:         -Widentities
                         -Wincomplete-uni-patterns
                         -Wpartial-fields
                         -fhide-source-paths
  if impl(ghc < 8.8)
    build-depends:       base-compat          >= 0.10
    hs-source-dirs:      prelude
    other-modules:       Prelude

library
  import:              common-options
  exposed-modules:     Foreign.Lua
                     , Foreign.Lua.Call
                     , Foreign.Lua.Core
                     , Foreign.Lua.Core.Error
                     , Foreign.Lua.Core.Types
                     , Foreign.Lua.FunctionCalling
                     , Foreign.Lua.Module
                     , Foreign.Lua.Peek
                     , Foreign.Lua.Push
                     , Foreign.Lua.Types
                     , Foreign.Lua.Types.Peekable
                     , Foreign.Lua.Types.Pushable
                     , Foreign.Lua.Userdata
                     , Foreign.Lua.Utf8
                     , Foreign.Lua.Util
  other-modules:       Foreign.Lua.Core.Auxiliary
                     , Foreign.Lua.Core.Functions
  reexported-modules:  lua:Foreign.Lua.Raw.Auxiliary
                     , lua:Foreign.Lua.Raw.Call
                     , lua:Foreign.Lua.Raw.Constants
                     , lua:Foreign.Lua.Raw.Error
                     , lua:Foreign.Lua.Raw.Functions
                     , lua:Foreign.Lua.Raw.Types
                     , lua:Foreign.Lua.Raw.Userdata
  hs-source-dirs:      src
  default-extensions:  LambdaCase
  other-extensions:    DeriveDataTypeable
                     , DeriveFunctor
                     , FlexibleContexts
                     , FlexibleInstances
                     , ScopedTypeVariables

test-suite test-hslua
  import:              common-options
  type:                exitcode-stdio-1.0
  main-is:             test-hslua.hs
  hs-source-dirs:      test
  ghc-options:         -threaded
  other-modules:       Foreign.LuaTests
                     , Foreign.Lua.CallTests
                     , Foreign.Lua.CoreTests
                     , Foreign.Lua.Core.AuxiliaryTests
                     , Foreign.Lua.Core.ErrorTests
                     , Foreign.Lua.FunctionCallingTests
                     , Foreign.Lua.ModuleTests
                     , Foreign.Lua.PeekTests
                     , Foreign.Lua.PushTests
                     , Foreign.Lua.TypesTests
                     , Foreign.Lua.Types.PeekableTests
                     , Foreign.Lua.Types.PushableTests
                     , Foreign.Lua.UserdataTests
                     , Foreign.Lua.UtilTests
                     , Test.HsLua.Arbitrary
                     , Test.HsLua.Util
  build-depends:       hslua
                     , QuickCheck           >= 2.7
                     , quickcheck-instances >= 0.3
                     , tasty                >= 0.11
                     , tasty-hunit          >= 0.9
                     , tasty-quickcheck     >= 0.8
